# lngs

./: .gitignore  .gitmodules  .travis.yml  CMakeGraphVizOptions.cmake  CMakeLists.txt  Coveralls.cmake  README.md  cmakeconfig.h.in  conanfile.txt  coveralls.py  default_data_path.in.hpp  get_cover.py  googletest.cmake  googletest.cpp
app/: CMakeLists.txt  lngs.cpp
app/data/strings/: en.po  fr.po  lngs.pot  pl.po
app/data/templates/: enum_string.mustache  enums.mustache  pot.mustache  py.mustache  py_string.mustache  res.mustache
app/include/lngs/internals/: commands.hpp  diagnostics.hpp  gettext.hpp  languages.hpp  mstch_engine.hpp  streams.hpp  strings.hpp  utf8.hpp
app/include/lngs/internals/strings/: lngs.hpp
app/src/: .gitignore  README.lngs  build.in.hpp  diagnostics.cpp  dirs.in.hpp  embedded_languages.cpp  embedded_languages.hpp  gettext.cpp  gettext_plain.cpp  iana-reg.py  lang_codes.cpp  lang_codes.inl  languages.cpp  lngs.cpp  lngs.idl  lngs_res.cpp  mstch_engine.cpp  streams.cpp  strings.cpp  utf8.cpp
app/src/cmds/: cmd_freeze_ids.cpp  cmd_load_mo.cpp  cmd_load_msgs.cpp  cmd_write_enums.cpp  cmd_write_mustache.cpp  cmd_write_pot.cpp  cmd_write_py.cpp  cmd_write_res.cpp
app/tests/: diag_helper.cc  diag_helper.h  diags.cc  enums.cc  exe_driver.py  freeze.cc  gettext.cc  gettext_plain.cc  load_strings.cc  mstch_engine.cc  ostrstream.h  pot.cc  python.cc  res.cc  streams.cc  strings_helper.h  test_env.hh  utf8.cc
app/tests/data/: .gitignore  A_a_b.po  comments.po  empty-index.po  empty_no_rev.mo  escaped.po  languages.txt  not-number.po  plural.po  readonly.file  unescaped.po  unfinished.po  unfrozen.idl  unfrozen.mo  unfrozen.po  unfrozen.pot  unhelpful.idl  unknown-field.po  word-string-word.po  word-word.po
app/tests/data/lngs_tests/: 0001-no-args.json  0001a-no-args-pl.json  0002-help.json  0003-version.json  0004-non-command.json  0005-pot-no-idl.json  0006-pot-unfrozen-idl.json  0007-enums-no-idl.json  0008-enums-empty-idl.json  0009-enums-no-out.json  0010-enums-with-foo copy.json  0011-enums-out-needs-param.json  0012-enums-help.json  0013-py-no-idl.json  0014-py-unfrozen-idl.json  0015-make-no-idl.json  0016-make-no-mo.json  0017-make-unfrozen-idl.json  0019-res-no-idl.json  0020-res-unfrozen-idl.json  0021-res-unfrozen-idl-include.json  0022-res-unfrozen-idl-verbose.json  0023-freeze-empty-idl.json  0024-freeze-unfrozen-idl.json  0025-freeze-unfrozen-idl-to-file.json  0026-freeze-unfrozen-idl-to-RO-file.json  0027-no-shared-data.json  0028-no-shared-data-enum.json  0029-color-always.json  0030-color-never.json  0031-color-meh.json
libs/: CMakeLists.txt  setup.py
libs/include/locale/: format.hpp  locale_file.hpp  translation.hpp
libs/liblngs/: CMakeLists.txt  lngs.pc.in
libs/liblngs/include/lngs/: argparser.hpp  file.hpp  lngs.hpp  lngs_base.hpp  lngs_file.hpp  lngs_storage.hpp  plurals.hpp  translation.hpp  utf8.hpp
libs/liblngs/include/lngs/strings/: lngs.hpp
libs/liblngs/lngs/: argparser.hpp  commands.hpp  config.h  diagnostics.hpp  gettext.hpp  languages.hpp  platform.hpp  streams.hpp  strings.hpp  utf8.hpp
libs/liblngs/lngs/strings/: lngs.hpp
libs/liblngs/src/: README.lngs  argparser.cpp  diagnostics.cpp  expr_parser.cpp  expr_parser.hpp  file.cpp  filesystem.cpp  gettext.cpp  iana-reg.py  lang_codes.cpp  lang_codes.inl  lang_file.cpp  languages.cpp  lngs.idl  lngs_res.cpp  lngs_storage.cpp  node.hpp  plurals.cpp  str.hpp  streams.cpp  strings.cpp  translation.cpp  utf8.cpp  version.cpp  version.in.hpp
libs/liblngs/src/cmds/: cmd_freeze_ids.cpp  cmd_load_mo.cpp  cmd_write_enums.cpp  cmd_write_pot.cpp  cmd_write_py.cpp  cmd_write_res.cpp
libs/liblngs/test-data/: bad.idl  empty.idl  over_the_top.mo  string_missing.mo  within_hash.mo  zero.mo
libs/liblngs/tests/: args-test.cpp  args-test.py  diag_helper.cc  diag_helper.h  diags.cc  enums.cc  file.cc  freeze.cc  gettext.cc  lang_file_bad.cc  lang_file_base.cc  lang_file_helpers.h  load_strings.cc  ostrstream.h  plurals.cc  pot.cc  python.cc  res.cc  storage.cc  strings.cc  strings_helper.h  translation.cc  utf8.cc
libs/liblngs/tests/data/: ab_LE.mo  broken_keys_2.data  empty_rev_nonzero_LE.mo  no_space_for_0.mo  no_space_for_strings_1.mo  no_space_for_strings_2.mo  not_asciiz.mo  zero.data
libs/liblngs/tests/data/testset1.ext/: pkg1.bar  pkg3.bar
libs/liblngs_lite/: CMakeLists.txt  lite.cpp
libs/liblngs_lite/include/lngs/: lite.h
libs/liblocale/: CMakeLists.txt
libs/liblocale/include/locale/: file.hpp  locale.hpp  plurals.hpp
libs/liblocale/locale/: file.hpp  locale.hpp  locale_file.hpp  locale_storage.hpp  plurals.hpp  translation.hpp
libs/liblocale/src/: expr_parser.cpp  file.cpp  lang_file.cpp  locale_storage.cpp  node.hpp  plurals.cpp  translation.cpp  version.cpp  version.in.hpp
libs/liblocale/test-data/: broken_attr_1.data  broken_strs_1.data  broken_strs_2.data  header_2.0.data  header_big.data  header_small.data  no_last.data
libs/liblocale/test-data/testset1.ext/: pkg1.fred-XYZZY  pkg3.foo
libs/liblocale/test-data/testset2.sub/baz-QUUX/: pkg3
libs/liblocale/test-data/testset2.sub/foo/: pkg1
libs/liblocale/tests/: file.cc  lang_file_bad.cc  lang_file_base.cc  lang_file_helpers.h  plurals.cc  storage.cc  strings.cc  translation.cc
libs/liblocale/tests/data/: broken_attr_2.data  broken_keys_1.data  file_tag.data
libs/liblocale/tests/data/testset1.ext/: pkg2.bar
libs/liblocale/tests/data/testset2.sub/foo/: pkg2
libs/liblocale_c/: CMakeLists.txt  strings.cpp
libs/liblocale_c/locale/: strings.h
libs/py-strings/: py-strings.cc
libs/src/: expr_parser.cpp  format.cpp  lang_file.cpp  plurals.cpp  py-strings.c  py-strings.cc  py_utils.hh  strings.cpp  translation.cpp
lngs/: CMakeLists.txt  argparser.cpp  argparser.hpp  config.h  dirs.in.hpp  filesystem.cpp  filesystem.hpp  gettext.cpp  gettext.hpp  iana-reg.py  languages.cpp  languages.hpp  lngs.cpp  lngs_enums.cpp  lngs_freeze.cpp  lngs_make.cpp  lngs_pot.cpp  lngs_py.cpp  lngs_res.cpp  pch.cpp  pch.h  streams.cpp  strings.cpp  utf8.cpp
lngs/strings/: en.po  fr.po  lngs.pot  pl.po
(+77 files in other folders)
